# pytest_otel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  test_spans_http.json
.github/: CODEOWNERS  copilot-instructions-documentation.md  copilot-instructions-markdown.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md
.github/awesome-copilot/files/agents/: 4.1-Beast.agent.md
.github/instructions/: markdown.instructions.md  python.instructions.md
.github/workflows/: cd.yml  ci.yml  release-drafter.yml
docs/demos/jaeger/: docker-compose.yml
docs/demos/jaeger/config/: otel-collector-config.yaml
src/pytest_otel/: __init__.py
tests/: docker-compose.yml  otel-collector.yaml  test_pytest_otel.py
tests/it/: conftest.py  test_basic_plugin.py  test_failure_code_plugin.py  test_failure_plugin.py  test_skip_plugin.py  test_success_plugin.py  test_xfail_no_run_plugin.py  test_xfail_plugin.py
tests/it/utils/: __init__.py
